refresh release service swagger docs
